<resources>
    <string name="app_name">ElderberryInventoryApp</string>
    <string name="inventory_nav_button_label">Inventory</string>
    <string name="calculator_nav_button_label">Calculator</string>
    <string name="go_get_nav_button_label">Go Get</string>
    <string name="number_hint_text">#</string>
    <string name="calculate_button_label">Calculate</string>

    <string-array name="item_categories">
        <item>Syrups</item>
        <item>Concentrates</item>
        <item>Teas</item>
        <item>Other Products</item>
        <item>Ingredients</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>